2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Added the ability
	to edit the input deck, revert etc.

	* libavogadro/src/tools/drawtool.cpp: Added some extra signals on
	mouse release to ensure molecule is updated.

	* libavogadro/src/extensions/gaussianinputdialog.ui: Fixed the tab
	ordering of the dialog.

	* libavogadro/src/periodictableview.cpp: Some changes to improve
	layout in Linux and hopefully Windows.

	* cmake/modules/FindOpenBabel2.cmake: Hopefully a new and improved
	FindOpenBabel2 using the new PkgConfig functions.

	* CMakeLists.txt: Set the CMake policy for CMake 2.6.

2008-05-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/mainwindow.h, avogadro/mainwindow.cpp: Changed engine
	configuration to a new button which brings up an extra "settings"
	window with tabs. Add signal/slot for enabling the Engine Settings
	window -- only enables button for engines with settings.

	* src/enginelistview.cpp, primitivetreeview.cpp: 
	Add setUniformItemSizes(true) -- supposedly improves performance.

2008-05-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/primitive.cpp, libavogadro/src/glwidget.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Made some changes to the
	surface engine and the GLWidget to improve locking. Seems to have
	prevented crashes in the surface engine here. More locking is needed.

	* libavogadro/src/tools/selectrotatetool.cpp: Added Control modifier
	to the tool to fix PR 1962903 - toggle selected primitives.

	* libavogadro/src/color.h: Cast GLFloats to ints to suppress warning.

	* libavogadro/src/CMakeLists.txt: Only add the Boost_INCLUDE_DIR if
	boost is found - fixes a CMake error with CMake 2.6.

2008-05-14  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/pythonextension.cpp: Fixed typo.

2008-05-14  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/animation*.*: Basic animation extension.
