@@ -1,5 +1,8 @@
 2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/tools/drawtool.cpp: Layout improvements in the tool
+	set up dialog.
+
 	* libavogadro/src/extensions/gaussianinputdialog.*: Added the ability
 	to edit the input deck, revert etc.
 
